crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__storage_type_display_all.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: displays
---
- file
- s3
- gcs
- azure
