crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__storage_type_from_str_aliases.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: cases
---
- - file
  - file
- - local
  - file
- - s3
  - s3
- - gcs
  - gcs
- - gs
  - gcs
- - azure
  - azure
- - blob
  - azure
