crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__storage_type_from_str_error.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: err.to_string()
---
"unknown storage type: ftp"
