crates/shipper-types/src/storage/snapshots/shipper_types__storage__snapshot_tests__storage_type_serde_roundtrip.snap
---
source: crates/shipper-types/src/storage/mod.rs
expression: types
---
- File
- S3
- Gcs
- Azure
